// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

option go_package = "go.chromium.org/luci/dm/api/distributor/swarming/v1;swarmingV1";

package swarmingV1;

message IsolatedRef {
  string id = 1;
  string server = 2;
}
